src/objects/Reclaimed_Transaction__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Budget_Id__c</fullName>
        <label>Budget Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Budget_Level__c</fullName>
        <label>Budget Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Budget_Name__c</fullName>
        <label>Budget Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Budget_URL__c</fullName>
        <label>Budget URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Reclaimed_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Reclaimed Transaction</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Amount__c</columns>
        <columns>Date__c</columns>
        <columns>Reason__c</columns>
        <columns>Budget_URL__c</columns>
        <columns>User__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Reclaim Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reclaimed Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>